cabal-version: >= 1.10

name:           ipld
version:        0.0.0.1
synopsis:       An implementation of the IPLD protocol.
description:    IPLD provides interoperability for hash-linked data structures such as those found in git, Bitcoin, IPFS, etc.
category:       recursion, library, bitcoin, ethereum, finance
homepage:       https://github.com/cmk/ipld
bug-reports:    https://github.com/cmk/ipld/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019 Chris McKinlay
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/ipld

library
  exposed-modules:
      Data.Binary.VarInt
      Data.Binary.BaseN
      Data.IPLD.CID
      Data.IPLD.Codec.Multibase
      Data.IPLD.Codec.Multihash
      Data.IPLD.Codec.Multihash.Internal
      -- Data.IPLD.Graph.Attribute
      -- Data.IPLD.Graph.Fold
      -- Data.IPLD.Graph.Hash
      -- Data.IPLD.Graph.Pretty
      -- Data.IPLD.Graph.Trie
      -- Data.IPLD.Graph.Trie.Cofree
      -- Data.IPLD.Graph.Trie.Yoneda
      -- Data.IPLD.Graph.Trie.ByteString
      Data.IPLD.Graph.Types
      -- Data.IPLD.Graph.Warning
      -- Data.IPLD.Graph.Zipper
      Data.IPLD.Store
  hs-source-dirs:
      src
  default-extensions: 
      FlexibleContexts 
      TypeFamilies 
      TypeApplications 
      RankNTypes 
      MultiParamTypeClasses 
      OverloadedStrings 
      ScopedTypeVariables
      DeriveGeneric
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      RecordWildCards
      StrictData
      TupleSections
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -fprint-expanded-synonyms
      -funbox-small-strict-fields
  build-depends:
      base >=4.9 && <5.0
    , adjunctions
    , bifunctors
    , binary >= 0.8.3
    , bytestring >= 0.10.4
    --, bytestring-trie
    , deepseq
    , cryptonite >= 0.13
    , hashable
    , memory >= 0.11
    , comonad
    , distributive
    , either
    , errors
    , free
    , memory
    , mtl
    , these
    , transformers
    , yaya
    , yaya-unsafe
    , aeson
    , base16-bytestring
    , base32-z-bytestring
    , base58-bytestring
    , base64-bytestring
    , formatting
    , sandi
    , serialise
    , tagged
    , text

test-suite spec
  type: exitcode-stdio-1.0
  main-is: test.hs
  other-modules:
      Test.Data.IPLD.CID
      Test.Data.IPLD.Codec.Multihash
      Test.Data.IPLD.Graph
      Test.Data.IPLD.Graph.Tree
      Test.Data.IPLD.Graph.List
      Test.Data.IPLD.Store
  hs-source-dirs:
      test
  default-extensions: 
      DeriveFunctor 
      DeriveFoldable 
      DeriveGeneric 
      DeriveTraversable 
      DataKinds
      FlexibleContexts 
      FlexibleInstances
      TypeFamilies 
      TypeApplications 
      RankNTypes 
      MultiParamTypeClasses 
      OverloadedStrings 
      ScopedTypeVariables
      DeriveGeneric
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      RecordWildCards
      StrictData
      TupleSections
      TemplateHaskell 
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -- -Wredundant-constraints
      -fprint-expanded-synonyms
      -funbox-small-strict-fields
      -Werror 
      -threaded 
      -rtsopts 
      -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.8
    , base16-bytestring
    , base64-bytestring
    , bifunctors
    , bytestring
    , containers
    , cryptonite
    , deriving-compat
    , directory
    , free
    , hedgehog
    , http-client
    , lens
    , lens-aeson
    , memory
    , ipld
    , mtl
    , optparse-applicative
    , pretty
    , random
    , safe-exceptions
    , temporary
    , text
    , transformers
    , unordered-containers
    , vector
    , warp
    , wreq
    , yaya
    , yaya-unsafe
  default-language: Haskell2010

